# TheCommunication

./: CMakeLists.txt  README.md  READMEtr.md  main.c
